# huffarch

./: Doxyconfig  LICENSE  Makefile  README.md  autoclean.sh  autogen.sh  configure.ac
rpm/: huffarch-1.0.0-1.src.rpm  huffarch-1.0.0-1.x86_64.rpm
src/: Makefile  Makefile.am  binary_tree.c  binary_tree.h  code_table.c  code_table.h  heap.c  heap.h  huff.c  huffman.c  huffman.h  message.h  option.c  option.h  utils.c  utils.h
